--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
                 <div class="conteiner-nota espa">
                     <div class="div-col">
                         <label for="nota1">NOTA 1</label>
-                        <input class="in-nota nota1" type="number" name="nota1" placeholder="nota1" required>
+                        <input class="in-nota nota1" type="number" name="nota1" placeholder="nota1" required step="any">
                     </div>
 
                     <div class="div-col">
                         <label for="nota2">NOTA 2</label>
-                        <input class="in-nota nota2" type="number" name="nota2" placeholder="nota2" required>
+                        <input class="in-nota nota2" type="number" name="nota2" placeholder="nota2" required step="any">
                     </div>
                 </div>
 
                 <div class="conteiner-nota espa">
                     <div class="div-col">
                         <label for="nota3">NOTA 3</label>
-                        <input class="in-nota nota3" type="number" name="nota3" placeholder="nota3" required>
+                        <input class="in-nota nota3" type="number" name="nota3" placeholder="nota3" required step="any">
                     </div>
 
                     <div class="div-col">
                         <label for="nota4">NOTA 4</label>
-                        <input class="in-nota nota4" type="number" name="nota4" placeholder="nota4" required>
+                        <input class="in-nota nota4" type="number" name="nota4" placeholder="nota4" required step="any">
                     </div>
                 </div>
 
