--- a/index.html
+++ b/index.html
@@ -314,28 +314,28 @@
                         <label>nota 1=</label>
                         <label class="val-nota-1">x</label>
                     </div>
-                    <input class="nova nova1" type="number" name="nova-nota" placeholder="digitar nota 1">
+                    <input class="nova nova1" type="number" name="nova-nota" placeholder="digitar nota 1" step="any">
                 </div>
                 <div>
                     <div class="nota-edit">
                         <label>nota 2=</label>
                         <label class="val-nota-2">x</label>
                     </div>
-                    <input class="nova nova2" type="number" name="nova-nota" placeholder="digitar nota 2">
+                    <input class="nova nova2" type="number" name="nova-nota" placeholder="digitar nota 2" step="any">
                 </div>
                 <div>
                     <div class="nota-edit">
                         <label>nota 3=</label>
                         <label class="val-nota-3">x</label>
                     </div>
-                    <input class="nova nova3" type="number" name="nova-nota" placeholder="digitar nota 3" >
+                    <input class="nova nova3" type="number" name="nova-nota" placeholder="digitar nota 3" step="any">
                 </div>
                 <div>
                     <div class="nota-edit">
                         <label>nota 4=</label>
                         <label class="val-nota-4">x</label>
                     </div>
-                    <input class="nova nova4" type="number" name="nova-nota" placeholder="digitar nota 4" >
+                    <input class="nova nova4" type="number" name="nova-nota" placeholder="digitar nota 4" step="any">
                 </div>
                 <div>
                     <h3 class="val-media"></>
